@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.greekvoice" name="Greek Voice" version="3.0.1" provider-name="Twilight0">
+<addon id="plugin.video.greekvoice" name="Greek Voice" version="3.1.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
-        <import addon="script.greekvoice.artwork" version="1.1.0"/>
-        <import addon="plugin.video.youtube" version="6.8.2"/>
-        <import addon="script.module.tulip" version="2.8.1"/>
+        <import addon="resource.images.greekvoice.artwork"/>
+        <import addon="plugin.video.youtube" version="6.8.9"/>
+        <import addon="script.module.tulip" version="2.8.6"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -18,7 +18,10 @@
         <license>GPL-3.0-only</license>
         <website>http://wpso.com/</website>
         <email>angelo@greekvoice.us</email>
-        <news>[B]3.0.1 (29-Nov-2020)[/B]
+        <news>[B]3.1.0 (04-Mar-2021)[/B]
+- Replaced artwork from "module" to a resource one
+
+[B]3.0.1 (29-Nov-2020)[/B]
 - Updated youtube api keys
 
 [B]3.0.0 (20-Jul-2020)[/B]
@@ -83,5 +86,9 @@
 - Featuring 5 main Live TV &amp; 3 Live Radio Channels
 - TV Guide parsed from the website
         </news>
+        <assets>
+            <icon>icon.png</icon>
+            <fanart>fanart.jpg</fanart>
+        </assets>
     </extension>
 </addon>
