@@ -1,3 +1,6 @@
+[B]3.1.0 (04-Mar-2021)[/B]
+- Replaced artwork from "module" to a resource one
+
 [B]3.0.1 (29-Nov-2020)[/B]
 - Updated youtube api keys
 
